Implement Gateway Service For Both the Iam and Vendor Service